@@ -2,12 +2,15 @@
 
 package org.hiero.mirror.importer.downloader.block;
 
+import static org.hiero.mirror.importer.downloader.block.BlockNodeProperties.FULL_BLOCK_NODE_APIS;
+
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.AssertTrue;
 import jakarta.validation.constraints.NotNull;
 import java.nio.file.Path;
 import java.time.Duration;
-import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
+import java.util.stream.Collectors;
 import lombok.Data;
 import org.apache.commons.lang3.StringUtils;
 import org.hiero.mirror.common.domain.transaction.BlockSourceType;
@@ -36,7 +39,7 @@ public final class BlockProperties {
     private Path initialLedgerIdPublication;
 
     @NotNull
-    private Collection<@Valid BlockNodeProperties> nodes = Collections.emptyList();
+    private List<@Valid BlockNodeProperties> nodes = List.of();
 
     private boolean persistBytes = false;
 
@@ -53,5 +56,13 @@ public final class BlockProperties {
         return StringUtils.isNotBlank(bucketName)
                 ? bucketName
                 : ImporterProperties.HederaNetwork.getBlockStreamBucketName(importerProperties.getNetwork());
+    }
+
+    @AssertTrue(message = "Each node must contain both STATUS and SUBSCRIBE_STREAM capable endpoints")
+    private boolean hasValidEndpoints() {
+        return nodes.stream().allMatch(n -> n.getEndpoints().stream()
+                .flatMap(e -> e.getApis().stream())
+                .collect(Collectors.toSet())
+                .containsAll(FULL_BLOCK_NODE_APIS));
     }
 }
